2008-05-28  Anders Carlsson  <andersca@apple.com>

        Reviewed by Oliver.

        <rdar://problem/5968071> "const f" crashes in JavaScriptCore
        
        Make sure to null check the initializer.
        
        * kjs/nodes.cpp:
        (KJS::ConstDeclNode::emitCodeSingle):

2008-05-28  Adam Roben  <aroben@apple.com>

        Make run-javascriptcore-tests work with a space in the path to testkjs

        Reviewed by Alexey Proskuryakov.

        * tests/mozilla/jsDriver.pl: Quote the path to the engine so that
        spaces will be interpreted correctly.

2008-05-28  Alexey Proskuryakov  <ap@webkit.org>

        Fixed a misguiding comment - my measurement for negative numbers only included cases
        where both operands were negative, which is not very interesting.

        * VM/Machine.cpp:

2008-05-28  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        Based on a patch by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=19180
        speed up SunSpider by optimizing immediate number cases

        1.4% speedup on SunSpider.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * kjs/JSImmediate.h:
        (KJS::JSImmediate::incImmediateNumber):
        (KJS::JSImmediate::decImmediateNumber):
        Added fast paths for ++ and --.

        (KJS::JSImmediate::canDoFastAdditiveOperations): Corrected a comment.

2008-05-28  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=19180
        speed up SunSpider by optimizing immediate number cases

        2% speedup overall, maximum 10% on controlflow-recursive and bitops-3bit-bits-in-byte,
        but a 4% regression on bitops-bits-in-byte and bitops-bitwise-and.

        * kjs/JSImmediate.h:
        (KJS::JSImmediate::canDoFastAdditiveOperations):
        (KJS::JSImmediate::addImmediateNumbers):
        (KJS::JSImmediate::subImmediateNumbers):