@@ -173,10 +173,7 @@ sub execute_tests {
 # (only check for their existance if the suite or test_dir has changed
 # since the last time we looked.)
         if ($last_suite ne $suite || $last_test_dir ne $test_dir) {
-            # FIXME: Quoting the path this way won't work with paths with
-            # quotes in them. A better fix would be to use the multi-parameter
-            # version of open(), but that doesn't work on ActiveState Perl.
-            $shell_command = "\"" . &xp_path($engine_command) . "\" -s ";
+            $shell_command = &xp_path($engine_command) . " -s ";
             
             $path = &xp_path($opt_suite_path . $suite . "/shell.js");
             if (-f $path) {
@@ -642,7 +639,10 @@ sub get_kjs_engine_command {
     my $retval;
     
     if ($opt_shell_path) {
-        $retval = $opt_shell_path;
+        # FIXME: Quoting the path this way won't work with paths with quotes in
+        # them. A better fix would be to use the multi-parameter version of
+        # open(), but that doesn't work on ActiveState Perl.
+        $retval = "\"" . $opt_shell_path . "\"";
     } else {
         die "Please specify a full path to the kjs testing engine";
     }
